methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: Missing closing brace `}' assumed here
move(stepCount: Int, goForward: Boolean){
^MethodsArgs:2: error: expected class or object definition
move(stepCount: Int, goForward: Boolean){
^