methods.args.MethodsArgs.scala.code
move(stepCount: Int, goForward: Boolean){
  if(goForward()==true){
    forward()
  }
    